Se modifica la cantidad de personas

--- a/RecetasOnline/recetas/Colombia/ajiaco.html
+++ b/RecetasOnline/recetas/Colombia/ajiaco.html
@@ -34,10 +34,10 @@
             <li>1/2 kilo de papa pastusa</li>
             <li>1 kilo de papa criolla</li>
             <li>4 mazorcas</li>
-            <li>Sal</li>
+            <li>Azucar</li>
             <li>Guascas</li>
             <li>Alcaparras</li>
-            <li>Crema de leche</li>
+            <li>Leche condesada</li>
         </ul>
         <b>PREPARACIÓN</b>
         <p>Corta las mazorcas en pedazos grandes y ponlos en una olla a fuego alto con dos litros de agua. Pela las papas sabaneras y córtalas en cubos para ponerlas a cocinar junto con las mazorcas.</p>
